# visionary

./: .gitignore  MANIFEST.in  cli.py  pyproject.toml  requirements.txt  setup.py
requirements/: base.txt  dev.txt  extras.txt  ml.txt
src/visionary/: __init__.py
src/visionary/annotators/: __init__.py  base.py  color.py  ellipse.py  geometric.py  geometry.py  halo.py  heatmap.py  percentagebar.py  temporal_privacy.py
src/visionary/detection/adapters/: ultralytics.py
src/visionary/detection/core/: __init__.py
src/visionary/metrics/: __init__.py  mean_average_precision.py
src/visionary/trackers/: tracking_utils.py
src/visionary/utils/: __init__.py  file.py  geometry.py  image.py  video.py
tests/: debug_test.py  test_annotators.py  test_api.py  test_detections.py  test_models.py  test_tasks.py  test_visionary.py
visionary/: __init__.py  models.py  tasks.py  unified_interface.py
visionary/annotators/: __init__.py  advanced_visual.py  base.py  bgoverlay.py  blur.py  boxcorner.py  circle.py  dot.py  geometry.py  icon.py  label.py  mask.py  orientedbox.py  pixels.py  polygon.py  richlabel.py  roundbox.py  temporal_privacy.py  trace.py  triangle.py
visionary/classification/: core.py
visionary/datasets/: __init__.py  core.py  processing.py  utils.py  video_enhancement.py
visionary/detection/adapters/: __init__.py  base.py  detectron2.py  transformers.py  ultralytics.py
visionary/detection/core/: core.py
visionary/detection/tools/: __init__.py  inference_slicer.py  line_zone.py  polygon_zone.py  smoother.py
visionary/detection/utils/: __init__.py  boxes.py
visionary/keypoint/: annotators.py  core.py
visionary/metrics/: additional_metrics.py
visionary/model_files/: __init__.py  download_models.py  list.txt  task_config.py  task_types.py
visionary/processors/: __init__.py  base.py  classification_processor.py  detection_processor.py  exceptions.py  factory.py  keypoint_processor.py  segmentation_processor.py  tracking_processor.py
visionary/trackers/: __init__.py  byte_track.py  track_management.py
visionary/utils/: __init__.py  draw.py  image.py  input_handler.py  obb.py  performance_monitoring.py  video.py
visionary/vlm/: connectors.py
